# qt-plugins

./: .gitignore  CMakeLists.txt
build_new/: CMakeCache.txt  build_error.txt  cmake_install.cmake  compile_errors3.txt  compile_errors4.txt  install_manifest.txt
build_new/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_new/platformtheme/: cmake_install.cmake  moc_statusnotifierwatcher_interface.cpp_parameters  statusnotifierwatcher_interface.cpp  statusnotifierwatcher_interface.h
build_new/platformtheme/cutefish-platformtheme_autogen/: deps  mocs_compilation.cpp
build_new/platformtheme/cutefish-platformtheme_autogen/EWIEGA46WW/: moc_hintsettings.cpp.d  moc_platformtheme.cpp.d  moc_qdbusmenubar_p.cpp.d  moc_systemtrayicon.cpp.d  moc_x11integration.cpp.d
build_new/platformtheme/cutefish-platformtheme_autogen/include/: main.moc.d
build_new/widgetstyle/: cmake_install.cmake
build_new/widgetstyle/cutefish-style_autogen/: deps  mocs_compilation.cpp
build_new/widgetstyle/cutefish-style_autogen/EWIEGA46WW/: moc_basestyle.cpp.d  moc_blurhelper.cpp.d  moc_pstyleplugin.cpp.d  moc_shadowhelper.cpp.d
cmake/: FindQt5PlatformSupport.cmake  FindQt5ThemeSupport.cmake
platformtheme/: CMakeLists.txt  main.cpp  platformtheme.cpp  qdbusmenubar.cpp  qdbusmenubar_p.h  x11integration.cpp
widgetstyle/: CMakeLists.txt  basestyle.cpp  basestyle.cpp.bak  basestyle.cpp.bak2  basestyle.h  basestyle_new_head.cpp  blurhelper.cpp  blurhelper.h  body.cpp  boxshadowrenderer.cpp  boxshadowrenderer.h  head.cpp  phantomcolor.cpp  phantomcolor.h  pstyleplugin.cpp  pstyleplugin.h  shadowhelper.cpp  shadowhelper.h  tileset.cpp  tileset.h  tools_patch.txt
